# llava-optim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
analysis/: collect_bench.py
analysis_plots/: summary.csv
conf/: config.yaml
conf/hydra/: default.yaml
conf/model/: llava_qwen2_0_5b.yaml
conf/preprocess/: default.yaml
conf/quant/: bf16.yaml  bnb4_fp4.yaml  bnb4_nf4.yaml  bnb8.yaml  fp16.yaml
conf/verbosity/: default.yaml
config/: cnn.yml  efficientnet_v2.yml  llava.yml  resnet.yml  train.yml  train_fmnist.yml  train_fmnist_CNN.yml  train_mlp.yml  train_mlp_dropout.yml
config/sweep/: cnn.yml  mlp.yml
outputs/: llava_runs.jsonl  quant_compare.csv  run.jsonl
outputs/bench_hydra/20251029_144247/.hydra/: hydra.yaml  overrides.yaml
outputs/bench_hydra/20251029_144412/.hydra/: hydra.yaml
outputs/bench_hydra/20251029_144509/.hydra/: config.yaml  hydra.yaml
outputs/bench_hydra/20251029_144542/.hydra/: hydra.yaml
outputs/bench_hydra/20251029_144645/.hydra/: hydra.yaml  overrides.yaml
outputs/bench_hydra/20251029_144847/.hydra/: config.yaml  hydra.yaml
outputs/bench_hydra/20251029_150343/.hydra/: hydra.yaml
outputs/bench_hydra/20251029_150704/.hydra/: config.yaml  hydra.yaml
outputs/bench_hydra/20251029_150729/: phases.csv  samples.jsonl  summary.json
outputs/bench_hydra/20251029_150729/.hydra/: hydra.yaml
outputs/bench_hydra/20251029_150932/: hardware.json  phases.csv  samples.jsonl  summary.json
outputs/bench_hydra/20251029_150932/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/bench_hydra/20251029_151022/: phases.csv  samples.jsonl  summary.json
outputs/bench_hydra/20251029_151022/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/bench_hydra/20251029_153950/.hydra/: config.yaml  hydra.yaml
outputs/bench_hydra/20251029_154055/: hardware.json  phases.csv  samples.jsonl  summary.json
outputs/bench_hydra/20251029_154055/.hydra/: config.yaml  hydra.yaml
outputs/bench_hydra/20251029_154428/: phases.csv  samples.jsonl  summary.json
outputs/bench_hydra/20251029_154428/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/bench_hydra/20251029_154645/: phases.csv  samples.jsonl  summary.json
outputs/bench_hydra/20251029_154645/.hydra/: config.yaml  hydra.yaml  overrides.yaml
runs/: bench.jsonl
runs/llava_ov_qwen05/: gens_20251028T162010_df29a5c6.csv  gens_20251028T162010_df29a5c6.jsonl
scripts/: bump.sh  clean.sh  format.sh  lint.sh  pre-commit.sh
src/: bench_hydra.py  benchmark.py  data_loading.py  inference.py  main.py
src/expt/: bench_llava.py  cli.py  config.py  main.py  model.py  utils.py
src/expt/data/: __init__.py  dataset.py  transform.py
src/expt/eval/: EDA.py  logger.py
src/llava/: LLaVa_Onevision_demo_inference.ipynb  demo_llava.py  inference.py
tests/: conftest.py  test_config.py  test_data.py  test_env.py  test_logger.py
